# voice-is-unique

./: .gitignore  CITATION.cff  LICENSE  README.md  SETUP.md  psc-howto.md  reproduce_commonvoice.sh  reproduce_timit.sh  setup_psc.sh
common-voice/: .gitignore  LICENSE  README.md  REPRODUCE.md  REPRODUCE_STUDY.md  requirements.txt  run_commonvoice_psc.slurm  run_psc.slurm
common-voice/CONFIG/: common_voice.json  timit.json
common-voice/manifest/: corpus_speakers.tsv  feats_manifest_8000.tsv
common-voice/psc_array/: analysis_array.slurm  analysis_combine.slurm  feats_array.slurm  feats_assemble.slurm  make_chunks.sh  submit_all.sh  timit_scaling.slurm  vot_array.slurm  vot_finalize.slurm
common-voice/reports/: cv_scaling_report.txt
common-voice/scripts/: build_manifest.py  download_cv17_10k.py  drvot_vot.py  extract_feats_8k.py  (+6 more)
extractor/: .gitignore  CLAUDE.md  DECISIONS.md  README.md  details-of-extraction.md  environment.deepformants.yml  environment.deepfry.yml  environment.drvot.yml  environment.yml  pyproject.toml
extractor/src/timit_features/: __init__.py  aggregate.py  cli.py  config.py  deepfry_creak.py  dsp.py  extract.py  features_alignment.py  features_formant.py  features_glottal.py  features_harmonic.py  features_nasality.py  features_praat.py  features_spectral.py  framing.py  iaif.py  io_timit.py  report.py  writers.py
extractor/src/timit_features/analysis/: __init__.py  config.py  diagnostics.py  fisher.py  pr.py  report_fisher_pr.py
extractor/tests/: test_pipeline.py
timit/: .gitignore  README.md  requirements.txt  run_timit_psc.slurm
(+32 files in other folders)
